fix: hero text on ios devices

--- a/src/app/(home)/_sections/Hero.module.css
+++ b/src/app/(home)/_sections/Hero.module.css
@@ -82,7 +82,7 @@
 		/* background: rgba(255, 0, 0, 0.2); */
 
 		@media (width <= 475px) {
-			text-align: center;
+			text-align: left;
 			font-size: clamp(2.9rem, -0.4818rem + 27.0545vw, 7.55rem);
 		}
 	}
